--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dependencies": {
         "deepmerge": "^3.2.0",
         "mysql2": "^2.1.0",
+        "random-words": "^2.0.1",
         "sql-formatter": "^2.3.2",
         "sqlstring": "^2.3.1"
     },
@@ -64,9 +65,9 @@
         "jest": "^24.8.0",
         "prettier": "^1.17.1",
         "rimraf": "^2.6.3",
-        "rollup": "^0.52.1",
-        "rollup-plugin-commonjs": "^8.2.6",
-        "rollup-plugin-typescript2": "^0.9.0",
+        "rollup": "^4.21.1",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-typescript2": "^0.36.0",
         "tmp": "^0.1.0",
         "ts-jest": "^24.0.2",
         "ts-node": "^8.1.0",
